loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__enum_methods_traits.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait Labeled {
    fn label(&self) -> String;
}
#[derive(Debug, Clone, PartialEq)]
pub enum Signal {
    Start,
    Stop,
}
impl incan_std_core::reflection::HasTypeClassName for Signal {
    fn __class_name__() -> &'static str {
        "Signal"
    }
}
impl Signal {
    pub fn message(&self) -> String {
        match self {
            Self::Start => "Start".to_string(),
            Self::Stop => "Stop".to_string(),
        }
    }
}
impl Signal {
    pub fn label(&self) -> String {
        let _ = match self.clone() {
            Signal::Start => {
                return "start".to_string();
            }
            Signal::Stop => {
                return "stop".to_string();
            }
        };
    }
    pub fn default() -> Self {
        return Signal::Start.clone();
    }
}
impl Labeled for Signal {
    fn label(&self) -> String {
        let _ = match self.clone() {
            Signal::Start => {
                return "start".to_string();
            }
            Signal::Stop => {
                return "stop".to_string();
            }
        };
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _signal: Signal = Signal::Start;
}
