loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__filtered_dict_comp_predicate.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let xs = vec![1, 2, 3, 4];
    let evens = ((xs).into_iter())
        .filter_map(|x| {
            if incan_std_core::num::py_mod_i64(x, 2) == 0 {
                Some((x, x * x))
            } else {
                None
            }
        })
        .collect::<std::collections::HashMap<_, _>>();
    let _ = println!("{}", * incan_std_core::collections::dict_get(& evens, & 2));
}
