loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__float_display.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Reading {
    value: f64,
}
impl incan_std_core::reflection::HasClassName for Reading {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Reading {
    fn __class_name__() -> &'static str {
        "Reading"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Reading {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Reading {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("value"),
                type_name: incan_std_core::frozen::FrozenStr::new("float"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Reading {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "value" => Some(format!("{}", self.value)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("value".to_string(), format!("{}", self.value))]
    }
}
fn describe(reading: Reading, exact: f64) -> String {
    let total: f64 = 100.0;
    let quarter = incan_std_core::num::py_div(total, 4.0);
    let interpolated = {
        let __parts: [&str; 6usize] = [
            "total=",
            " quarter=",
            " field=",
            " debug=",
            " exact=",
            "",
        ];
        let __args: Vec<String> = vec![
            incan_std_core::strings::float_to_string(total),
            incan_std_core::strings::float_to_string(quarter),
            incan_std_core::strings::float_to_string(reading.value), format!("{:?}",
            total), incan_std_core::strings::float_to_string(exact)
        ];
        incan_std_core::strings::fstring(&__parts, &__args)
    };
    let converted = incan_std_core::strings::str_concat(
        &incan_std_core::strings::str_concat(
            &incan_std_core::strings::float_to_string(total),
            &" ",
        ),
        &incan_std_core::strings::float_to_string(reading.value),
    );
    let _ = println!(
        "{} {}", incan_std_core::strings::float_to_string(total),
        incan_std_core::strings::float_to_string(quarter)
    );
    let _ = println!("{}", incan_std_core::strings::float_to_string(quarter));
    return incan_std_core::strings::str_concat(
        &incan_std_core::strings::str_concat(&interpolated, &" "),
        &converted,
    );
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", describe(Reading { value : 2.0 }, 3.0));
}
