loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__function_calls.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn greet(name: String) -> String {
    let _ = "Simple function for testing calls";
    return {
        let __parts: [&str; 2usize] = ["Hello, ", "!"];
        let __args: Vec<String> = vec![format!("{}", name)];
        incan_std_core::strings::fstring(&__parts, &__args)
    };
}
fn add(a: i64, b: i64) -> i64 {
    let _ = "Test positional arguments";
    return a + b;
}
fn greet_with_title(name: String, title: String) -> String {
    let _ = "Test default arguments";
    return {
        let __parts: [&str; 3usize] = ["Hello, ", " ", "!"];
        let __args: Vec<String> = vec![format!("{}", title), format!("{}", name)];
        incan_std_core::strings::fstring(&__parts, &__args)
    };
}
fn test_function_calls() {
    let _message: String = greet("World".to_string());
    let _sum: i64 = add(5, 3);
    let _greeting1: String = greet_with_title("Smith".to_string(), "Mr.".to_string());
    let _greeting2: String = greet_with_title("Jones".to_string(), "Dr.".to_string());
    let _length: i64 = incan_std_core::strings::str_len(&("hello"));
    let string_list: Vec<String> = vec![
        "a".to_string(), "b".to_string(), "c".to_string()
    ];
    let _count: i64 = ::std::convert::identity(string_list.len() as i64);
    let _upper: String = incan_std_core::strings::str_upper(&"test");
    let _lower: String = incan_std_core::strings::str_lower(&"TEST");
    let _stripped: String = incan_std_core::strings::str_strip(&"  spaces  ");
    let _result: String = incan_std_core::strings::str_strip(
        &incan_std_core::strings::str_upper(&"hello world"),
    );
    let mut numbers: Vec<i64> = vec![1, 2, 3];
    let _ = numbers.push(4);
    let _popped: i64 = incan_std_core::collections::__private::list_pop(&mut numbers);
    let _data: std::collections::HashMap<String, i64> = [
        ("a".to_string(), 1),
        ("b".to_string(), 2),
    ]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_function_calls();
}
